puse la imagen del gato

--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>kitten Miaw</title>
+    <link rel="stylesheet" href="assets/css/grilla.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="shortcut icon" href="assets/img/gato.ico">
 </head>
 
 <body>
+    <div class="container">
+        <section id="centro_civico">
+            <div class="row">
+                <div class="col-6">
+                    <img src="assets/img/Copia de Kitten-medium.png" alt="">
+                </div>
+            </div>
+        </section>
+    </div>
 
 </body>
 
