ya puse los gatos

--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 </head>
 
 <body>
+    <style>
+        img {
+            display: block;
+            margin: 0 auto;
+        }
+    </style>
     <picture>
-        <source media="(min-width=825px)" srcset="assets/img/Copia de Kitten-medium.png">
-        <source media="(min-width:535px) and (max-width:824px)" srcset="assets/img/Copia de Kitten-medium.png">
-        <source media="(min-width:200px) and (max-width:534px)" srcset="assets/img/Copia de Kitten-medium.png">
+        <source media="(min-width:825px)" srcset="assets/img/medium.png">
+        <source media="(min-width:535px) and (max-width:824px)" srcset="assets/img/large.png">
+        <img media="(min-width:200px) and (max-width:534px)" srcset="assets/img/small.png">
     </picture>
 
 </body>
